maze.lessons.maze.island.IslandMaze.scala.error
Escaper:17: error: not found: value festFaceMur
    if (festFaceMur()){
        ^