maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    setDirection(Direction.NORTH)
    if (estFaceMur){
      
    }else{
      avance()
    }
  }
  prendBiscuit()
}

def contourneObjet(){
  if (estFaceMur()){
    droite()
    if (festFaceMur()){
      droite()
      avance()
      gauche()
      if (estFaceMur()){
        droite()
      	avance()
      	gauche()
      }else{
        avance()
      }
    }else{
      avance()
    }
  }
}